<resources>
    <string name="app_name">cmput301f24mikasa</string>
    <string name="home">HOME</string>
    <string name="profiles">Profiles</string>
    <string name="events">Events</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="admin">Admin</string>
    <string name="profiles_caps">PROFILES</string>
    <string name="user_profile">User Profile</string>
    <string name="facility_profile">Facility Profile</string>
    <string name="user_profile_caps">USER PROFILE</string>
    <string name="name">Name</string>
    <string name="email">e-mail</string>
    <string name="phone_number">phone number (optional)</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="create_event">CREATE EVENT</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="create_event_small_caps">Create Event</string>
    <string name="qr_code_description">QR Code</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="enter_facility_name">Enter Facility Name</string>
    <string name="enter_facility_location">Enter Facility Location</string>
    <string name="enter_facility_description">Enter Facility Description</string>
    <string name="update">Update</string>
    <string name="facility_profile_caps">FACILITY PROFILE</string>
    <string name="events_caps">EVENTS</string>
    <string name="manage_events">Manage Events</string>
    <string name="events_signed_up_for">Events Signed Up For</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="upload_poster">Upload poster</string>
    <string name="date_example">MM/DD/YYYY</string>
    <string name="an_image_of_your_event">An image of your event</string>
    <string name="list_of_events">List of Events</string>
    <string name="event_title">Event Title</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="waiting_list_for_insert_event_have_to_adj_lol">WAITING LIST FOR \'INSERT\' EVENT have to adj lol</string>
    <string name="manage_waitlist">Manage Waitlist</string>
    <string name="sample">Sample</string>
    <string name="username_and_info_if_any">USERNAME AND INFO IF ANY</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="upload_qr_code">Upload QR Code</string>
    <string name="sign_up">Sign Up</string>
    <string name="search_facilities">Search Facilities</string>
    <string name="facility_name">Facility Name</string>
    <string name="location">Location</string>
    <string name="admin_panel">ADMIN PANEL</string>
    <string name="manage_facilities">Manage Facilities</string>
    <string name="manage_profiles">Manage Profiles</string>
    <string name="manage_images">Manage Images</string>
    <string name="manage_all_events">Manage All Events</string>
    <string name="notification_text">Notification Text</string>
    <string name="events_signed_up_for_caps">EVENTS SIGNED UP FOR</string>
    <string name="you_haven_t_signed_up_for_any_events_yet">You haven\'t signed up for any events yet.</string>
    <string name="event_date">Event Date</string>
    <string name="event_description">Event Description</string>
    <string name="price_0_00">Price: $0.00</string>
    <string name="unjoin">Unjoin</string>
    <string name="reload">Reload</string>
    <string name="settings">Settings</string>
    <string name="notification_settings">NOTIFICATION SETTINGS</string>
    <string name="enable_notifications">Enable Notifications</string>
</resources>