<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/event_title" />

    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/event_date" />

    <TextView
        android:id="@+id/event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/event_description" />

    <TextView
        android:id="@+id/event_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/price_0_00" />

    <!-- Unjoin Button -->
    <Button
        android:id="@+id/btnUnjoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unjoin" />

</LinearLayout>
