<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->
    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_profile_caps"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:padding="16dp" />

    <ImageView
        android:id="@+id/profile_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/header_text"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/profile_image_desc"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/upload_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image_view"
        android:layout_centerHorizontal="true"
        android:text="@string/upload_image"
        android:layout_marginTop="8dp" />

    <!-- Name Input -->
    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upload_image_button"
        android:background="@android:color/darker_gray"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:autofillHints="name"
        android:textColorHint="@android:color/black"/>

    <!-- Email Input -->
    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_edit_text"
        android:background="@android:color/darker_gray"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:autofillHints="emailAddress"
        android:textColorHint="@android:color/black"/>

    <!-- Phone Input -->
    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edit_text"
        android:background="@android:color/darker_gray"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:autofillHints="phone"
        android:textColorHint="@android:color/black"/>

    <!-- Save Profile Button -->
    <Button
        android:id="@+id/save_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_edit_text"
        android:text="@string/save_profile"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>

    <include
        layout="@layout/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>
