<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"
    android:text="@string/admin_dashboard"
    android:textColor="#000080"
    android:textSize="24sp"
    android:textStyle="bold"
    android:padding="10dp" />

<Button
android:id="@+id/btn_manage_events"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="50dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp"
android:text="@string/manage_events"
android:backgroundTint="#0D47A1"
android:textColor="#FFFFFF" />

<Button
android:id="@+id/btn_manage_profiles"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_below="@id/btn_manage_events"
android:layout_marginTop="20dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp"
android:text="@string/manage_profiles"
android:backgroundTint="#0D47A1"
android:textColor="#FFFFFF" />

<Button
android:id="@+id/btn_manage_images"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_below="@id/btn_manage_profiles"
android:layout_marginTop="20dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp"
android:text="@string/manage_images"
android:backgroundTint="#0D47A1"
android:textColor="#FFFFFF" />

<Button
android:id="@+id/btn_manage_facilities"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_below="@id/btn_manage_images"
android:layout_marginTop="20dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp"
android:text="@string/manage_facilities"
android:backgroundTint="#0D47A1"
android:textColor="#FFFFFF" />

<include
layout="@layout/nav_bar"
android:layout_width="match_parent"
android:layout_height="match_parent"/>
</RelativeLayout>
