<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->
    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profiles_caps"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:padding="16dp" />

    <!-- User Profile Button -->
    <Button
        android:id="@+id/user_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_text"
        android:text="@string/user_profile"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

    <!-- Facility Profile Button -->
    <Button
        android:id="@+id/facility_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_profile_button"
        android:text="@string/facility_profile"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
