<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header TextView for Notification Settings -->
    <TextView
        android:id="@+id/tv_notification_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0D47A1"
        android:text="@string/notification_settings"
        android:textAlignment="center"
        android:textColor="#F6F4F4"
        android:textSize="34sp" />

    <!-- Toggle Button for Enabling/Disabling Notifications -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_notifications"
        android:layout_below="@id/tv_notification_settings"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <!-- Back Button -->
    <Button android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="#0D47A1"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

</RelativeLayout>
